[gd_scene load_steps=16 format=3 uid="uid://4omiecg1l6u"]

[ext_resource type="Script" path="res://Scripts/enemy_health.gd" id="1_y2akd"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_885ee"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="3_8ldip"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="4_ouiu6"]
[ext_resource type="Script" path="res://Scripts/enemy.gd" id="5_85v73"]
[ext_resource type="PackedScene" uid="uid://dw7q8eigdffc1" path="res://UI/enemyhealthvalue.tscn" id="5_kodx8"]
[ext_resource type="PackedScene" uid="uid://c0b65u5pyatqx" path="res://Assets/projectile.tscn" id="5_lp453"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_frbct"]
resource_local_to_scene = true
bg_color = Color(0, 0, 0, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3vv18"]
resource_local_to_scene = true
bg_color = Color(0, 0.726214, 0.172309, 1)

[sub_resource type="LabelSettings" id="LabelSettings_88r3k"]
resource_local_to_scene = true
font_size = 32
font_color = Color(1, 0, 0, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.372549)
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cw3g5"]
resource_local_to_scene = true
bg_color = Color(0.205117, 0.205117, 0.205117, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w56vm"]
resource_local_to_scene = true

[sub_resource type="BoxMesh" id="BoxMesh_l8fo5"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_w56vm")
size = Vector3(0.25, 0.5, 0.25)

[sub_resource type="BoxShape3D" id="BoxShape3D_7b1u5"]
size = Vector3(0.3, 0.6, 0.3)

[sub_resource type="ViewportTexture" id="ViewportTexture_4fhvy"]
viewport_path = NodePath("SubViewport")

[node name="Enemy" type="Node3D" groups=["Enemy"]]

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="EnemyHealth" type="ProgressBar" parent="SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -8.0
offset_right = 64.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_frbct")
theme_override_styles/fill = SubResource("StyleBoxFlat_3vv18")
max_value = 100000.0
value = 100.0
show_percentage = false
script = ExtResource("1_y2akd")

[node name="EnemyHealthValue" parent="SubViewport/EnemyHealth" instance=ExtResource("5_kodx8")]
layout_mode = 1
offset_left = -174.0
offset_top = -50.0
offset_right = 174.0
offset_bottom = -5.0
text = "EHV
"
label_settings = SubResource("LabelSettings_88r3k")

[node name="ProgressBar2" type="ProgressBar" parent="SubViewport/EnemyHealth"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_cw3g5")
show_percentage = false

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_885ee")

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("3_8ldip")
initial_state = NodePath("Spawning")

[node name="Spawning" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_ouiu6")

[node name="Moving" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_ouiu6")

[node name="Attacking" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_ouiu6")

[node name="EnemyCharacterBody" type="CharacterBody3D" parent="."]
collision_layer = 2
script = ExtResource("5_85v73")
projectile = ExtResource("5_lp453")

[node name="MeshInstance3D" type="MeshInstance3D" parent="EnemyCharacterBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
mesh = SubResource("BoxMesh_l8fo5")
skeleton = NodePath("../..")

[node name="MeleeCollider" type="CollisionShape3D" parent="EnemyCharacterBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("BoxShape3D_7b1u5")

[node name="Marker3D" type="Marker3D" parent="EnemyCharacterBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.244237, 0.248744)

[node name="Sprite3D" type="Sprite3D" parent="EnemyCharacterBody"]
transform = Transform3D(0.5, 0, 0, 0, 0.12941, 0.482963, 0, -0.482963, 0.12941, 0, 0.612914, 0)
billboard = 1
texture = SubResource("ViewportTexture_4fhvy")

[node name="RayCast3D" type="RayCast3D" parent="EnemyCharacterBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.40065, 0)
target_position = Vector3(0, 0, 2)
collide_with_areas = true

[node name="AttackCooldown" type="Timer" parent="EnemyCharacterBody"]
wait_time = 2.0

[node name="RangedAttackCooldown" type="Timer" parent="EnemyCharacterBody"]

[connection signal="value_changed" from="SubViewport/EnemyHealth" to="SubViewport/EnemyHealth" method="_on_value_changed"]
[connection signal="value_changed" from="SubViewport/EnemyHealth" to="EnemyCharacterBody" method="_on_enemy_health_value_changed"]
[connection signal="state_entered" from="StateChart/CompoundState/Spawning" to="." method="_on_spawning_state_entered"]
[connection signal="timeout" from="EnemyCharacterBody/AttackCooldown" to="EnemyCharacterBody" method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="EnemyCharacterBody/RangedAttackCooldown" to="EnemyCharacterBody" method="_on_ranged_attack_cooldown_timeout"]
